--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "gulp-uglify": "^3.0.2",
     "normalize.css": "^8.0.1",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "powerange": "github:abpetkov/powerange"
   }
 }
